# vega

./: CMakeLists.txt  config.h.in
cmake/: cpack.cmake
cmake/centos/: centos.cmake
cmake/debian/: conffiles  debian.cmake  postinst
contrib/: vega-ppp.service
contrib/debian/: vega-ppp-default  vega-ppp-init
contrib/gentoo/net-dialup/vega-ppp/: vega-ppp-1.3.5.ebuild  vega-ppp-9999.ebuild
contrib/gentoo/net-dialup/vega-ppp/files/: vega-pppd-confd  vega-pppd-init
crypto/: CMakeLists.txt  tomcrypt_cipher.h  tomcrypt_custom.h  tomcrypt_hash.h
vega-cmd/: CMakeLists.txt  vega-cmd.1  vega_cmd.c
vega-pppd/: CMakeLists.txt  main.c  session.c  vega-ppp.conf  vega-ppp.conf.5
vega-pppd/auth/: CMakeLists.txt
vega-pppd/backup/: CMakeLists.txt
vega-pppd/cli/: cli.c  telnet.c
vega-pppd/ctrl/ipoe/: CMakeLists.txt  dhcpv4.c  dhcpv4.h  ipoe.c
vega-pppd/ctrl/l2tp/: CMakeLists.txt  l2tp.c
vega-pppd/ctrl/pppoe/: CMakeLists.txt  pppoe.c
vega-pppd/ctrl/pptp/: CMakeLists.txt
vega-pppd/ctrl/sstp/: CMakeLists.txt  sstp.c
vega-pppd/extra/: CMakeLists.txt
vega-pppd/extra/net-snmp/: CMakeLists.txt  VEGA-PPP-MIB.txt  agent.c  sessionTable.h  sessionTable_data_access.c  sessionTable_data_access.h  sessionTable_data_get.c  sessionTable_data_get.h  sessionTable_interface.c
vega-pppd/ipv6/: CMakeLists.txt
vega-pppd/libnetlink/: iputils.c
vega-pppd/logs/: CMakeLists.txt  log_syslog.c
vega-pppd/lua/: CMakeLists.txt
vega-pppd/radius/: CMakeLists.txt  lua.c
vega-pppd/shaper/: CMakeLists.txt
vega-pppd/triton/: CMakeLists.txt
vega-pppd/vlan-mon/: CMakeLists.txt
